--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                 <a href="https://www.google.com/" target="_blank">Спасибо, Cергей Брин!</a>
                 <ul>
-                    <li>Apples</li>
+                    <li>Яблокый</li>
                     <li>Oranges</li>
                     <li>Pineapples</li>
                     <li>Mangoes</li>
@@ -51,6 +51,7 @@
                 </ol>
                 <table>
                     <tr><th>Month</th><th>Rent</th><th>Utilities</th><th>Groceries</th><th>Restaurants</th><th>Entertainment</th></tr>
+                    <tr><td>August</td><td>$1500</td><td>$150</td><td>$350</td><td>$100</td><td>$50</td></tr>
                 </table>
     </body>
 
